# applyr

./: .env.example  .gitignore  README.md  job_agent.py  main.py  pyproject.toml  yt_research_agent.py
core/: __init__.py  cache.py  config.py  logging.py  models.py  retry.py
data/fixtures/: job_listings.json  research_signals.json
researcher/: __init__.py  evals.py  fixtures.py  models.py  service.py
researcher/app/: __init__.py  cli.py  main.py  scraper.py
researcher/collectors/: __init__.py  reddit.py  reviews.py
researcher/data/fixtures/: saas_signals.json
researcher/tests/: test_signal_service.py
researcher/workflow/: __init__.py  aggregator.py  orchestration.py  pipeline.py  rendering.py  scorer.py
src/applyr/: cli.py
src/applyr/agents/: __init__.py
src/applyr/agents/job/: __init__.py  evals.py  models.py  service.py  submission.py
src/applyr/agents/research/: __init__.py  evals.py  models.py  orchestration.py  service.py
src/applyr/core/: config.py  logging.py  models.py
tests/: test_job_service.py  test_research_service.py
