[project]
name = "applyr"
version = "0.1.0"
description = "Agents for job applications and content market research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.10.1",
    "google-api-python-client>=2.176.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=0.6.6",
    "playwright>=1.58.0",
    "pydantic-settings>=2.10.1",
    "tavily-python>=0.7.23",
    "typer>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[project.scripts]
applyr = "applyr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applyr"]
