[project]
name = "applyr"
version = "0.1.0"
description = "Single-pass SaaS opportunity research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "beautifulsoup4>=4.13.4",
    "langgraph>=0.6.6",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.3",
    "typer>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[project.scripts]
applyr = "researcher.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "researcher"]
